# kareoke

./: .gitignore  INSTALL.md  LICENSE  PACKAGING.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  UV_GUIDE.md  build.bat  encore.py  encore.spec  plan.md  pyproject.toml  requirements-gpu.txt  requirements.txt  run.bat  run.sh  setup.bat  setup.sh  test.py
karaoke_app/: __init__.py  main.py  utils.py
karaoke_app/audio/: __init__.py  device_manager.py  engine.py  fx.py  lyrics.py  playback.py  recording_manager.py  separation.py  sync.py  timescale.py  video_converter.py  voice_effects.py  youtube.py  youtube_downloader.py
karaoke_app/core/: __init__.py  config.py  jobs.py  library.py  migrate.py  paths.py
karaoke_app/ui/: __init__.py  drawer.py  main_window.py  mixer.py  settings_dialog.py  stage.py  theme.py  transport.py  widgets.py
karaoke_app/ui/components/: __init__.py  notification_toast.py  side_panel.py  youtube_browser.py
karaoke_app/ui/styles/: dark_gradient_theme.qss
tools/: screenshots.py
